--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <description>HAL Core Console :: Parent Aggregator</description>
     <groupId>org.jboss.as</groupId>
     <artifactId>jboss-as-console-parent</artifactId>
-    <version>2.0.0.Beta1</version>
+    <version>2.0.0.Beta2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
 
