--- a/resources/pom.xml
+++ b/resources/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.jboss.as</groupId>
         <artifactId>jboss-as-console-parent</artifactId>
-        <version>2.0.0.Beta1</version>
+        <version>2.0.0.Beta2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 </project>
