--- a/testsuite/smoke/pom.xml
+++ b/testsuite/smoke/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.jboss.as</groupId>
         <artifactId>jboss-as-console-testsuite</artifactId>
-        <version>2.0.0.Beta1</version>
+        <version>2.0.0.Beta2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
